k8s/diabetesDeployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: diabetesdeployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: diabetes
  template:
    metadata:
      labels:
        app: diabetes
    spec:
      containers:
      - name: diabetes
        image: buketbm/diabetes
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
