k8s/diabetesPod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: diabetes
  labels:
    name: diabetes
spec:
  containers:
  - name: diabetes
    image: buketbm/diabetes
    imagePullPolicy: IfNotPresent
