k8s/diabetesLB.yaml
apiVersion: v1
kind: Service
metadata:
  name: diabeteslb
spec:
  selector:
    app: diabetes
  ports:
    - protocol: TCP
      port: 30008
      targetPort: 9376
  clusterIP: 10.96.174.166
  type: LoadBalancer
status:
  loadBalancer:
    ingress:
    - ip: 192.0.2.127
