k8s/diabetesService.yaml
apiVersion : v1
kind: Service
metadata:
  name: diabetesservice
spec:
  selector:
    app: diabetesservice1
  type: NodePort
  ports:
  - port: 8080
    protocol: TCP
    nodePort: 30008
    targetPort: 8080
